Always float right section to the right (bug 657799)
On smaller screen sizes the right column on the dashboard
would clear the other columns because the width was slightly
too big.

--- a/media/css/input.css
+++ b/media/css/input.css
@@ -58,7 +58,7 @@ h2 {
 .col {
     display: inline-block;
     vertical-align: top;
-    width: 21.27%; /* = 200 / 940 */
+    width: 20.555%; /* = 200 / 940 */
     margin-left: 2.12%; /* = 20 / 940 */
 }
 .html-rtl .col {
